changed the bottom to a footer element and tried to fix the spacing on the front page

--- a/main.css
+++ b/main.css
@@ -94,5 +94,7 @@ li,p {
   line-height: 1.5;
 }
 .Description {
-  font-size: .75rem
+  font-size: 1rem;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
